name:                service-randombytes-haskell
version:             0.1.0.0
synopsis:            Service to get random bytes
description:         Please see README.md
homepage:            http://github.com/pernas/service-randombytes-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Jaume Pernas
maintainer:          jaume@pernas.cat
copyright:           unlicense
category:            entropy
build-type:          Simple
cabal-version:       >=1.10

executable service-randombytes-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       aeson,
                       scotty,
                       bytestring,
                       base16-bytestring,
                       base64-bytestring,
                       transformers,
                       text,
                       wai-cors,
                       wai-extra,
                       http-types
